Add lots of changes

--- a/templates/default.html
+++ b/templates/default.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>E5 coffee boy</title>
+    <title>Ministry of Coffee Affairs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/static/site.css" rel="stylesheet" />
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>   
+    <script src="/static/d3.v3.min.js" charset="utf-8"></script>   
+    <script src="/static/site.js" charset="utf-8"></script>   
   </head>
 
   <body>
     {% block body %}{% endblock %}
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="/static/jquery.js"></script>
     <script src="/static/bootstrap.min.js"></script>
   </body>
 </html>
