--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 <div class="container">
     <form role="form" method="POST" action="/login" class="form-signin">
         {{ form.hidden_tag() }}
-        <h1>E5 coffeboy</h1>
+        <h1>E5 Ministry of Coffee Affairs</h1>
         <h2 class="form-signin-heading">LDAP Login</h2>
             {{ form.username(class="form-control", placeholder="Username", autofocus=True) }}
             {{ form.password(class="form-control", placeholder="Password") }}
