Fix site.js further

--- a/templates/user.html
+++ b/templates/user.html
@@ -7,7 +7,7 @@
         <h2>Current balance: <span style="color: {{ balance_color }};">{{ current_balance }}</span></h2>
         <div id="personal_graph"></div>
         <script>
-          draw_graph('/personal_data.json', '#personal_graph')
+          draw_graph('/personal_data.json', '#personal_graph', 400, 400)
         </script>
     </div>
 </div>
