--- a/templates/global.html
+++ b/templates/global.html
@@ -8,7 +8,7 @@
     <h2>Current coffee price: {{ coffee_price }}</h2>
     <div id='global_graph'></div>
     <script>
-      draw_graph('/global_data.json', '#global_graph', w=680, h=400)
+      draw_graph('/global_data.json', '#global_graph', 680, 400)
     </script>
 </header>
 
