--- a/templates/admin.html
+++ b/templates/admin.html
@@ -21,4 +21,15 @@
     </form>
 </div>
 
+<div class="container">
+    <form method="POST" action="/administrate/expenses" class="form-signin">
+        {{ expenses_form.hidden_tag() }}
+        <h2 class="form-signin-heading">Add consumption</h2>
+            {{ expenses_form.description(class="form-control", placeholder="Description") }}
+            {{ expenses_form.amount(class="form-control", placeholder="Amount") }}
+            {{ expenses_form.date(class="form-control", placeholder="Date") }}
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
+    </form>
+</div>
+
 {% endblock %}
