Implement list of shame

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -32,4 +32,12 @@
     </form>
 </div>
 
+
+<h2>List of Shame:</h2>
+<ul>
+{% for entry in list_of_shame %}
+    <li>{{entry}}</li>
+{% endfor %}
+</ul>
+
 {% endblock %}
