--- a/templates/global.html
+++ b/templates/global.html
@@ -5,6 +5,7 @@
 <header>
     <h1>State of the Coffee</h1>
     <h2>Current budget: {{ current_budget }}</h2>
+    <h2>Actual budget: {{ actual_budget }}</h2>
     <h2>Current coffee price: {{ coffee_price }}</h2>
     <div id='global_graph'></div>
     <script>
