--- a/templates/global.html
+++ b/templates/global.html
@@ -4,8 +4,8 @@
 
 <header>
     <h1>State of the Coffee</h1>
-    <h2>Current budget: {{ current_budget }}</h2>
-    <h2>Actual budget: {{ actual_budget }}</h2>
+    <h2>Actual budget: {{ current_budget }}</h2>
+    <h2>Target budget: {{ actual_budget }}</h2>
     <h2>Current coffee price: {{ coffee_price }}</h2>
     <div id='global_graph'></div>
     <script>
