--- a/templates/site.html
+++ b/templates/site.html
@@ -28,6 +28,19 @@
 
     <div class="container">
       <div class="content" role="main">
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+      <div class="messages">
+        {% for message in messages %}
+          <div class="row">
+            <div class="col-md-12 alert alert-warning" role="alert">
+              {{ message }}
+            </div>
+          </div>
+        {% endfor %}
+      </div>
+      {% endif %}
+      {% endwith %}
       {% block content %}{% endblock %}
       </div>
     </div>
