add price choices

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -30,6 +30,9 @@
         <div class="form-group">
           {{ consumption_form.units(class="form-control", placeholder="Units") }}
         </div>
+        <div class="form-group">
+          {{ consumption_form.prices(class="form-control", placeholder="Prices") }}
+        </div>
         <button class="btn btn-primary btn-block" type="submit">Submit</button>
     </form>
   </div>
