--- a/templates/consumption_list.html
+++ b/templates/consumption_list.html
@@ -8,22 +8,25 @@
 </div>
 <div class="row">
   <div class="col-md-12">
-    {# <form method="POST" action="/administrate/consumption/list" class="form-group">
-        {{ payment_form.hidden_tag() }}
-        <h3 class="form-signin-heading">Payment</h3>
-        <div class="form-group">
-          {{ payment_form.uid(class="form-control", placeholder="Name", autofocus=True) }}
+    <form method="POST" action="{{ url_for('administrate_consumtion_list') }}" class="form-horizontal">
+      {{ form.hidden_tag() }}
+      {% for uform in form.users %}
+      <div class="row form-group">
+        <div class="col-xs-4">
+          <label>{{ uform.consumptions.label }}</label>
+          {{ uform.user(class="form-control") }}
         </div>
-        <div class="form-group">
-          {{ payment_form.amount(class="form-control", placeholder="Amount") }}
+        <div class="col-xs-8">
+          {% for c in uform.consumptions %}
+          <div class="col-xs-6">
+            {{ c(class="form-control") }}
+          </div>
+          {% endfor %}
         </div>
-        <button class="btn btn-primary btn-block" type="submit">Submit</button>
-      </form> #}
-      {% for uform in form.userforms %}
-        {{ uform.units() }}
-        {{ uform.prices() }}
-        <br>
+      </div>
       {% endfor %}
+      <button class="btn btn-primary btn-block" type="submit">Submit</button>
+    </form>
   </div>
 </div>
 
