--- a/templates/default.html
+++ b/templates/default.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/static/site.css" rel="stylesheet" />
-    <script src="/static/d3.v3.min.js" charset="utf-8"></script>   
-    <script src="/static/site.js" charset="utf-8"></script>   
+    <script src="/static/d3.min.js" charset="utf-8"></script>
+    <script src="/static/site.js" charset="utf-8"></script>
   </head>
 
   <body>
     {% block body %}{% endblock %}
     <script src="/static/jquery.js"></script>
+    <script src="/static/tether.min.js"></script>
     <script src="/static/bootstrap.min.js"></script>
   </body>
 </html>
