--- a/templates/site.html
+++ b/templates/site.html
@@ -1,49 +1,39 @@
 {% extends "default.html" %}
 {% block body %}
-    <div class="navbar navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">E5 Ministry of Coffee Affairs</a>
-        </div>
-        <div class="collapse navbar-collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-            {%- for endpoint, caption in [
-              ('index', 'Global'),
-              ('personal', 'Personal'),
-              ('admin', 'Admin'),
-            ] %}
-              <li{% if endpoint == request.endpoint %} class=active{% endif
-              %}><a href={{ url_for(endpoint) }}>{{ caption }}</a>
-            {%- endfor %}
-            {% block admin_navbar %}
-            {% endblock %}
-          </ul>
-          <a href="/logout" class="btn btn-default navbar-btn pull-right">Logout</a>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+<nav class="navbar navbar-light bg-faded">
+  <div class="container">
+    <a class="navbar-brand" href="{{ url_for('index') }}">
+      E5 Ministry of Coffee Affairs
+    </a>
+    <ul class="nav navbar-nav">
+      {%- for endpoint, caption in [
+        ('index', 'Global'),
+        ('personal', 'Personal'),
+        ('admin', 'Admin'),
+      ] %}
+        <li class="nav-item{% if endpoint == request.endpoint %} active{% endif
+        %}"><a class="nav-link" href={{ url_for(endpoint) }}>{{ caption }}</a>
+      {%- endfor %}
+      {% block admin_navbar %}
+      {% endblock %}
+      <li class="nav-item float-xs-right">
+        <a href="/logout" class="btn btn-default navbar-btn">Logout</a>
+    </ul>
+  </div>
+</nav>
 
-    <div class="container">
-      <div class="content" role="main">
-      {% with messages = get_flashed_messages() %}
-      {% if messages %}
-      <div class="messages">
-        {% for message in messages %}
-          <div class="row">
-            <div class="col-md-12 alert alert-warning" role="alert">
-              {{ message }}
-            </div>
-          </div>
-        {% endfor %}
+<div id="main" class="container">
+  {% with messages = get_flashed_messages() %}
+  {% if messages %}
+    {% for message in messages %}
+      <div class="row">
+        <div class="col-md-12 alert alert-warning" role="alert">
+          {{ message }}
+        </div>
       </div>
-      {% endif %}
-      {% endwith %}
-      {% block content %}{% endblock %}
-      </div>
-    </div>
+    {% endfor %}
+  {% endif %}
+  {% endwith %}
+  {% block content %}{% endblock %}
+</div>
 {% endblock %}
