--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,9 +10,9 @@
   </a>
   <ul class="dropdown-menu">
     <li><a href="/admin">Adminpanel</a>
-    <li><a href="{{ url_for("administrate_consumption_list") }}">Consumelist</a>
-    <li><a href="{{ url_for("administrate_service_list") }}" target="_blank">service.pdf</a>
-    <li><a href="{{ url_for("administrate_list") }}" target="_blank">list.pdf</a>
+    {# <li><a href="{{ url_for("administrate_consumption_list") }}">Consumelist</a> #}
+    {# <li><a href="{{ url_for("administrate_service_list") }}" target="_blank">service.pdf</a> #}
+    {# <li><a href="{{ url_for("administrate_list") }}" target="_blank">list.pdf</a> #}
   </ul>
 {% endblock %}
 
