--- a/templates/personal.html
+++ b/templates/personal.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col-sm-8" style="text-align: center;">
-    <h2>Current balance: <span class="{{ balance_type }}">{{ current_balance }}</span></h2>
+    <h2>Current balance: <span class="{{ balance_type }}">{{ balance | euros }}</span></h2>
     <div id="personal_graph"></div>
     <script>
       draw_graph('/personal_data.json', '#personal_graph', 400, 400)
