Improve admin form, prepare for db transfer

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -80,7 +80,7 @@
     </tr>
   </thead>
   <tbody>
-    {% for entry in list_of_shame %}
+    {% for entry in listofshame %}
     <tr>
       <td>{{ '%2.2f' % (entry.balance / 100) }}</td>
       <td>{{ entry.name }}</td>
