--- a/templates/global.html
+++ b/templates/global.html
@@ -7,11 +7,11 @@
       <tbody>
         <tr>
           <td>Actual Budget</td>
-          <td>{{ current_budget }}</td>
+          <td>{{ current_budget | euros }}</td>
         </tr>
         <tr>
           <td>Target Budget</td>
-          <td>{{ actual_budget }}</td>
+          <td>{{ target_budget | euros }}</td>
         </tr>
         <tr>
           <th colspan="2">Prices</th>
