start working on the api

--- a/templates/app.html
+++ b/templates/app.html
@@ -3,5 +3,8 @@
 {% block body %}
 <div id="main">
 </div>
+{% endblock %}
+
+{% block scripts %}
 <script src="/static/build/app.js"></script>
 {% endblock %}
