--- a/templates/default.html
+++ b/templates/default.html
@@ -11,8 +11,10 @@
 
   <body>
     {% block body %}{% endblock %}
-    <script src="/static/jquery.js"></script>
-    <script src="/static/tether.min.js"></script>
-    <script src="/static/bootstrap.min.js"></script>
   </body>
+  <script src="/static/jquery.js"></script>
+  <script src="/static/tether.min.js"></script>
+  <script src="/static/bootstrap.min.js"></script>
+  {% block scripts %}
+  {% endblock %}
 </html>
