--- a/templates/site.html
+++ b/templates/site.html
@@ -4,14 +4,14 @@
   <div class="container">
     <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
     <div class="collapse navbar-toggleable-md" id="navbarResponsive">
-      <a class="navbar-brand" href="{{ url_for('index') }}">
+      <a class="navbar-brand" href="{{ url_for('coffee.index') }}">
         E5 Ministry of Coffee Affairs
       </a>
       <ul class="nav navbar-nav">
         {%- for endpoint, caption in [
-          ('index', 'Global'),
-          ('personal', 'Personal'),
-          ('admin', 'Admin'),
+          ('coffee.index', 'Global'),
+          ('coffee.personal', 'Personal'),
+          ('coffee.admin', 'Admin'),
         ] %}
           <li class="nav-item{% if endpoint == request.endpoint %} active{% endif
           %}"><a class="nav-link" href={{ url_for(endpoint) }}>{{ caption }}</a>
@@ -19,7 +19,7 @@
         {% block admin_navbar %}
         {% endblock %}
         <li class="nav-item float-xs-right">
-          <a href="/logout" class="btn btn-default navbar-btn">Logout</a>
+          <a href="{{ url_for('coffee.logout') }}" class="btn btn-default navbar-btn">Logout</a>
         </li>
       </ul>
     </div>
