--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
           </button>
           {% block brand %}
-          <a class="navbar-brand" href="{{ url_for('admin') }}">{{ admin_view.admin.name }}</a>
+          <a class="navbar-brand" href="{{ url_for('coffee.admin') }}">{{ admin_view.admin.name }}</a>
           {% endblock %}
         </div>
         <!-- navbar content -->
