--- a/templates/personal.html
+++ b/templates/personal.html
@@ -7,14 +7,14 @@
     <h2>Current balance: <span class="{{ balance_type }}">{{ balance | euros }}</span></h2>
     <div id="personal_graph"></div>
     <script>
-      draw_graph('/personal_data.json', '#personal_graph', 400, 400)
+      draw_graph('{{ url_for('coffee.personal_data') }}', '#personal_graph', 400, 400)
     </script>
   </div>
   <div class="col-sm-4">
     <h2>Transactions</h2>
     <div id="personal_table"></div>
     <script>
-      draw_table('/personal_data.json', ['date', 'amount'], '#personal_table')
+      draw_table('{{ url_for('coffee.personal_data') }}', ['date', 'amount'], '#personal_table')
     </script>
   </div>
 </div>
