--- a/templates/app.html
+++ b/templates/app.html
@@ -6,5 +6,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="/static/build/app.js"></script>
+<script src="{{ url_for('coffee.static', filename='/static/build/app.js') }}"></script>
 {% endblock %}
