--- a/templates/app.html
+++ b/templates/app.html
@@ -6,5 +6,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{{ url_for('coffee.static', filename='build/app.js') }}"></script>
+<script src="{{ code_url }}"></script>
 {% endblock %}
