--- a/templates/default.html
+++ b/templates/default.html
@@ -3,8 +3,9 @@
   <head>
     <title>Ministry of Coffee Affairs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{{ url_for('coffee.static', filename='bootstrap.min.css') }}" rel="stylesheet" media="screen">
-    <link href="{{ url_for('coffee.static', filename='site.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('coffee.static', filename='css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
+    <link href="{{ url_for('coffee.static', filename='css/site.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('coffee.static', filename='css/font-awesome.min.css') }}" rel="stylesheet" />
     <script src="{{ url_for('coffee.static', filename='d3.min.js') }}" charset="utf-8"></script>
     <script src="{{ url_for('coffee.static', filename='site.js') }}" charset="utf-8"></script>
   </head>
