--- a/templates/admin.html
+++ b/templates/admin.html
@@ -72,7 +72,11 @@
 </div>
 
 <form action="{{ url_for('coffee.administrate_mail_credentials')}}" method="POST">
-  <h3>Email Credentials</h3>
+  <h3>Email Credentials
+    {% if mail_status %}<i class="fa fa-check-circle-o" aria-hidden="true"></i>
+    {% else %}<i class="fa fa-times-circle-o" aria-hidden="true"></i>
+    {% endif %}
+  </h3>
   <div class="form-group row">
     {{ mail_form.hidden_tag() }}
     <div class="col-xs-5">
