implement database stuff for achievements

--- a/templates/site.html
+++ b/templates/site.html
@@ -30,6 +30,7 @@
             <li class="dropdown-item"><a href="{{ url_for('transaction.index_view') }}">Transaction</a>
             <li class="dropdown-item"><a href="{{ url_for('service.index_view') }}">Service</a>
             <li class="dropdown-item"><a href="{{ url_for('consumption.index_view') }}">Consumption</a>
+            <li class="dropdown-item"><a href="{{ url_for('achievementdescriptions.index_view') }}">Achievments</a>
           </ul>
         </li>
         {% endblock %}
