--- a/templates/app.html
+++ b/templates/app.html
@@ -8,4 +8,5 @@
 {% block scripts %}
 {{ super() }}
 <script src="{{ code_url }}"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 {% endblock %}
