Use font-awesome CDN

--- a/templates/default.html
+++ b/templates/default.html
@@ -16,6 +16,7 @@
   <script src="{{ url_for('coffee.static', filename='jquery.js') }}"></script>
   <script src="{{ url_for('coffee.static', filename='tether.min.js') }}"></script>
   <script src="{{ url_for('coffee.static', filename='bootstrap.min.js') }}"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   {% block scripts %}
   {% endblock %}
 </html>
