--- a/templates/admin.html
+++ b/templates/admin.html
@@ -55,8 +55,8 @@
 
 <form action="{{ url_for('coffee.administrate_mail_credentials')}}" method="POST">
   <h3>Email Credentials
-    {% if mail_status %}<i class="fa fa-check-circle-o" aria-hidden="true"></i>
-    {% else %}<i class="fa fa-times-circle-o" aria-hidden="true"></i>
+    {% if mail_status %}<i class="far fa-check-circle" aria-hidden="true"></i>
+    {% else %}<i class="far fa-times-circle" aria-hidden="true"></i>
     {% endif %}
   </h3>
   <div class="form-group row">
