--- a/templates/default.html
+++ b/templates/default.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{{ url_for('coffee.static', filename='css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
     <link href="{{ url_for('coffee.static', filename='css/site.css') }}" rel="stylesheet" />
-    <link href="{{ url_for('coffee.static', filename='css/font-awesome.min.css') }}" rel="stylesheet" />
-    <script src="{{ url_for('coffee.static', filename='d3.min.js') }}" charset="utf-8"></script>
-    <script src="{{ url_for('coffee.static', filename='site.js') }}" charset="utf-8"></script>
   </head>
 
   <body>
@@ -17,6 +14,7 @@
   <script src="{{ url_for('coffee.static', filename='tether.min.js') }}"></script>
   <script src="{{ url_for('coffee.static', filename='bootstrap.min.js') }}"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   {% block scripts %}
   {% endblock %}
 </html>
